tests/NormalTests/paczka1/small_fuzzy/78058749.err
Error in line 3: 2qdiuUOqYT4 S444 78,7
Error in line 4: yNd8oh S312 35,2
Error in line 5: 2qdiuUOqYT4 S143 90,4
Error in line 8: 2qdiuUOqYT4 S444 65,8
